--- a/clients/linux/style.css
+++ b/clients/linux/style.css
@@ -8,3 +8,10 @@
 #err {
 	color: red;
 }
+.tree-msg {
+	padding-top: 8px;
+	padding-bottom: 8px;
+	background: rgba(0, 0, 0, .2);
+	margin-left: 2px;
+	margin-right: 2px;
+}
