improve dialog ui, add icons, add link to wikipedia encryption

--- a/clients/linux/style.css
+++ b/clients/linux/style.css
@@ -2,6 +2,10 @@
 	font-size: 28px;
 	font-weight: bold;
 }
+.onboard-link {
+	padding: 0px;
+	margin: 0px;
+}
 .settings-heading {
 	font-size: 20px;
 }
