--- a/clients/android/app/src/main/res/layout/preference_subscription_info.xml
+++ b/clients/android/app/src/main/res/layout/preference_subscription_info.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="6dp">
+    android:paddingVertical="6dp"
+    android:layout_marginHorizontal="20dp">
 
     <TextView
+        android:id="@+id/subscription_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/default_value"/>
