--- a/clients/android/app/src/main/res/layout/preference_usage_bar.xml
+++ b/clients/android/app/src/main/res/layout/preference_usage_bar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginHorizontal="20dp">
+    android:paddingHorizontal="20dp">
 
     <ProgressBar
         android:id="@+id/usage_bar"
