--- a/clients/android/app/src/main/res/layout/preference_subscription_info.xml
+++ b/clients/android/app/src/main/res/layout/preference_subscription_info.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="6dp"
-    android:layout_marginHorizontal="20dp">
+    android:paddingVertical="18dp"
+    android:paddingHorizontal="20dp">
 
     <TextView
         android:id="@+id/subscription_info"
