--- a/clients/android/app/src/main/res/layout/purchased_premium.xml
+++ b/clients/android/app/src/main/res/layout/purchased_premium.xml
@@ -2,8 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="40dp"
+    android:background="@color/bottomSheetBackgroundColor"
+    tools:ignore="Overdraw">
 
     <TextView
         android:layout_width="wrap_content"
