--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
   <color name="bottomSheetBackgroundColor">@color/light</color>
   <color name="dialogBackgroundColor">@color/white</color>
   <bool name="windowLightStatusBar">true</bool>
+
+  <color name="imagePdfToolbarColor">#99FFFFFF</color>
 </resources>
