--- a/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
@@ -7,42 +7,46 @@
     android:backgroundTint="?attr/colorPrimaryDark"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:padding="5dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingVertical="5dp">
-
-        <TextView
-            android:id="@+id/linear_file_name"
-            style="@style/Main.File.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintStart_toEndOf="@+id/linear_file_icon"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/linear_file_description"
-            style="@style/Main.File.SubSubTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/linear_file_name"
-            app:layout_constraintTop_toBottomOf="@+id/linear_file_name" />
+        android:orientation="horizontal"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/linear_file_icon"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/file_image_content_description"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp" >
+
+            <TextView
+                android:id="@+id/linear_file_name"
+                style="@style/Main.File.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginBottom="5dp"/>
+
+            <TextView
+                android:id="@+id/linear_file_description"
+                style="@style/Main.File.SubSubTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
