--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,6 @@
   <color name="bottomSheetBackgroundColor">@color/lightBlack</color>
   <color name="dialogBackgroundColor">@color/black</color>
   <bool name="windowLightStatusBar">false</bool>
+
+  <color name="imagePdfToolbarColor">#99000000</color>
 </resources>
