--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -14,4 +14,5 @@
   <bool name="windowLightStatusBar">false</bool>
 
   <color name="imagePdfToolbarColor">#99000000</color>
+  <color name="pdfPageIndicatorBackgroundColor">#22FFFFFF</color>
 </resources>
