android: support viewing images and pdfs (#1135)
* intermediate works

* can view images

* intermediate for pdf

* can view pdfs and images load much quicker

* used different pdf renderer, images load faster, small design changes to files list to handle large names appropriately

* added toolbar hiding, page indicator, and jumps to correct page on rotation

* lowered max zoom and now will delete pdfs loaded but not viewed

* handle toolbar differently, cleaned up code, and added comment to readDocumentBytes

* fixed image icon not showing and made toolbar for images able to disappear

* final cleanup

* updated readme for android and linux

--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,7 @@
   <color name="bottomSheetBackgroundColor">@color/lightBlack</color>
   <color name="dialogBackgroundColor">@color/black</color>
   <bool name="windowLightStatusBar">false</bool>
+
+  <color name="imagePdfToolbarColor">#99000000</color>
+  <color name="pdfPageIndicatorBackgroundColor">#22FFFFFF</color>
 </resources>
