--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -1,19 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Main" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--        <item name="colorAccent">@color/colorAccent</item>-->
 
-        <item name="android:windowBackground">@color/colorPrimaryDark</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="23">@bool/windowLightStatusBar</item>
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
 
-        <item name="android:actionBarStyle">@style/Main.Widget.Actionbar</item>
-        <item name="android:actionOverflowButtonStyle">@style/Main.Overflow</item>
-
-        <item name="android:navigationBarColor">@color/navigationBarColor</item>
-        <item name="titleTextStyle">@style/Main.Title</item>
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="colorSurface">@color/colorSurface</item>
+        <item name="colorError">@color/colorError</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+        <item name="colorOnBackground">@color/colorOnBackground</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
+        <item name="colorOnError">@color/colorOnError</item>
 
         <item name="snackbarStyle">@style/Main.Widget.SnackBar</item>
         <item name="snackbarTextViewStyle">@style/Main.Widget.SnackBar.TextView</item>
@@ -22,11 +25,8 @@
         <item name="alertDialogTheme">@style/Main.Widget.Dialog.Alert</item>
     </style>
 
+
     <style name="Main.Widget.Dialog" parent="Theme.AppCompat.DayNight.Dialog">
-        <item name="android:background">@color/dialogBackgroundColor</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="buttonBarPositiveButtonStyle">@style/Main.Button.Borderless.Colored</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/Main.Button.Borderless.Colored</item>
         <item name="buttonBarNegativeButtonStyle">@style/Main.Button.Borderless.Colored</item>
@@ -34,10 +34,6 @@
     </style>
 
     <style name="Main.Widget.Dialog.Alert" parent="Theme.AppCompat.DayNight.Dialog.Alert">
-        <item name="android:background">@color/dialogBackgroundColor</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="buttonBarPositiveButtonStyle">@style/Main.Button.Borderless.Colored</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/Main.Button.Borderless.Colored</item>
         <item name="buttonBarNegativeButtonStyle">@style/Main.Button.Borderless.Colored</item>
@@ -45,24 +41,15 @@
     </style>
 
     <style name="Main.Widget.SnackBar" parent="Widget.MaterialComponents.Snackbar">
-        <item name="backgroundTint">@color/background</item>
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Main.Widget.SnackBar.TextView" parent="Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Main.Widget.Actionbar" parent="Widget.AppCompat.ActionBar">
-        <item name="backgroundColor">@color/windowBackground</item>
-        <item name="android:textColorPrimary">@color/textColor</item>
-        <item name="android:textColorSecondary">@color/colorPrimary</item>
-        <item name="actionMenuTextColor">@color/textColor</item>
     </style>
 
     <style name="Main.Widget.RegularImageButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">?android:selectableItemBackgroundBorderless</item>
-        <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
     </style>
@@ -71,7 +58,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_margin">10dp</item>
-        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:animateLayoutChanges">true</item>
         <item name="android:focusable">true</item>
@@ -81,7 +67,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_margin">10dp</item>
-        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:animateLayoutChanges">true</item>
         <item name="android:focusable">true</item>
@@ -105,9 +90,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">5dp</item>
-        <item name="backgroundTint">@color/colorPrimary</item>
-        <item name="rippleColor">@color/light</item>
-        <item name="tint">@null</item>
     </style>
 
     <style name="Main.Overflow">
@@ -115,45 +97,33 @@
     </style>
 
     <style name="Main.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="titleTextColor">@color/colorPrimary</item>
     </style>
 
     <style name="Main.Text.Caption" parent="TextAppearance.AppCompat.Caption" />
 
     <style name="Main.Text.Small" parent="TextAppearance.AppCompat.Small">
-        <item name="android:textColor">@color/textColor</item>
-        <item name="android:fontFamily">monospace</item>
     </style>
 
     <style name="Main.Text.Medium" parent="TextAppearance.AppCompat.Medium">
-        <item name="android:textColor">@color/textColor</item>
-        <item name="android:fontFamily">sans-serif</item>
     </style>
 
     <style name="Main.File.Title" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/textColor</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:fontFamily">monospace</item>
     </style>
 
     <style name="Main.File.SubSubTitle" parent="TextAppearance.AppCompat.Small">
-        <item name="android:textColor">@color/textColor</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">monospace</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:gravity">start</item>
     </style>
 
     <style name="Main.Text.Headline" parent="TextAppearance.AppCompat.Display1">
-        <item name="android:textColor">@color/textColor</item>
-        <item name="android:fontFamily">monospace</item>
         <item name="android:textAlignment">center</item>
     </style>
 
     <style name="Main.Button.Borderless.Colored" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
